--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "nextjs-progressbar": "0.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sass": "^1.26.9"
+    "react-modal": "^3.14.4",
+    "react-responsive-modal": "^6.2.0",
+    "sass": "^1.26.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
